# DenoisePET

./: CMakeLists.txt  README.md  ct_processor.cpp  ct_processor.h  denoise.cu  denoise.cuh  denoise_runner.cpp  kernel.cu  main.cpp  pet_processor.cpp  pet_processor.h  report1.nsys-rep
cuda_magic/: add.cu  add_block.cu  add_block_cuda.exp  add_cuda.exp  add_grid.cu  add_grid_cuda.exp
